--- a/src/containers/tetris.css
+++ b/src/containers/tetris.css
@@ -1,5 +1,5 @@
 .tetris{
-    width: 600px;
+    width: 450px;
     height: 700px;
     background-color: yellow;
     position: absolute;
@@ -7,4 +7,49 @@
     left: 50%;
     transform: translate(-50% , -50%);
     
+}
+
+.setting_btns{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 20px;
+    margin-left: 80px;
+    width: 80px;
+}
+
+.power_btn{
+    margin-left: 70px;
+    margin-top: 40px;
+}
+
+.controll_btn{
+    display: grid;
+    grid-template-columns: repeat(4 , 1fr);
+    grid-template-rows: repeat(3,1fr);
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    right: 120px;
+    bottom: 150px;
+}
+
+.controll_btn *:nth-child(1){
+    grid-row: 2/3;
+    grid-column: 1/2;
+}
+
+.controll_btn *:nth-child(2){
+    grid-row: 1/2;
+    grid-column: 3/4;
+}
+
+.controll_btn *:nth-child(3){
+    grid-row: 4/5;
+    grid-column: 3/42;
+}
+
+.controll_btn *:nth-child(4){
+    grid-row: 2/3;
+    grid-column: 4/5;
 }
