--- a/src/containers/monitore.css
+++ b/src/containers/monitore.css
@@ -1,11 +1,11 @@
 .monitore{
     width: 75%;
-    background-color: grey;
-    box-shadow: 2px 2px 1px black inset , -2px -2px 1px black inset;
-    border-top: 5px solid rgba(155, 142, 2, 0.3);
-    border-left: 5px solid rgba(155, 142, 2, 0.3);
-    border-right: 5px solid rgb(255, 240, 157);
-    border-bottom: 5px solid rgb(255, 240, 157);
+    background-color: rgb(159,174,135);
+    box-shadow: 2px 2px 1px rgb(115,113,65) inset , -2px -2px 1px rgb(115,113,65) inset;
+    border-top: 5px solid rgba(148, 124, 38, 0.3);
+    border-left: 5px solid rgba(148, 124, 38, 0.3);
+    border-right: 5px solid rgb(236, 221, 130);
+    border-bottom: 5px solid rgb(236, 221, 130);
 
     margin: 0 auto;
     display: grid;
